plugins {
    id 'com.android.application'
}

android {
    compileSdk 30

    defaultConfig {
        applicationId "cn.tiancaifan.enjoy_music"
        minSdk 21
        targetSdk 27
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}
allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
//            options.compilerArgs << "-Xlint:unchecked" << "--illegal-access=warn"
        }
    }

}
dependencies {
    //歌词
    implementation 'com.github.zhangliangming:HPLyrics:v1.66'
    implementation 'com.github.zhangliangming:Register:v1.1'
    //网络请求
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    //图片处理请求
    implementation 'com.github.bumptech.glide:glide:4.13.1'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.13.1@aar'
    //json处理
    implementation 'com.google.code.gson:gson:2.8.7'
    //轮播
    implementation 'io.github.youth5201314:banner:2.2.2'
    //ae动画
    implementation 'com.airbnb.android:lottie:3.1.0'
    //流式布局
    implementation 'com.github.alidili:FlowLayout:v1.5'
    //多线程下载封装库
    implementation('com.zhouyou:rxeasyhttp:2.1.5')

    implementation 'androidx.recyclerview:recyclerview:1.2.0'
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation fileTree(dir: "../libs", include: ["*.aar"])
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'

}